--- a/inc/style/main.css
+++ b/inc/style/main.css
@@ -16,10 +16,18 @@
     display:grid;
     justify-content:center;
     align-content:center;
+    grid-template-rows:1fr auto;
+    place-items:center;
+	background:url('../img/background.svg') repeat;
+}
+#mList{
+    position:relative;
+    display:grid;
+    justify-content:center;
+    align-content:center;
     grid-template-columns:auto auto;
     grid-column-gap:40vw;
     place-items:center;
-	background:url('../img/background.svg') repeat;
 }
 #enlist{
     display:flex;
@@ -80,6 +88,35 @@
     background-color: #a89b9b;
     cursor: pointer;
 }
+#sel{
+    display:none;
+    position:relative;
+    margin:10px 50%;
+}
+.navMon>form{
+    display:grid;
+    grid-template-rows: auto auto;
+    grid-gap:5px;
+}
+.navMon>form>.CodeBlock{
+    min-height:30vh;
+    min-width:20vw;
+    padding:0.2em;
+    background-color: #4f4e4e;
+    border: 1px solid #ddd;
+    text-align: left;
+    font-family: "Roboto";
+    font-size:calc(0.5vw + 0.7em);
+    color: #ffffff;
+}
+.navMon>form>.SubCode{
+    width:7.5em;
+    background-color:transparent;
+    color:#fff;
+    border-radius: 50px;
+    font-size:1.2em;
+    place-self:center;
+}
 .blockArt{
     margin:2vh 25vw;
 }
@@ -106,81 +143,16 @@
     margin:2em;
     font-size:1.2em;
 }
-
-#monitor.open{
-    display:grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap:40px;
+.navMon>form>.SubCode:hover{
+    cursor: pointer;
+    background: linear-gradient(270deg, #ff9898, #ff9400, #ffcd00);
+    background-size: 600% 600%;
+    animation:background 3s ease infinite;
 }
-
-.navMon.open{
-    position:fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width:100vw;
-    height:100vh;
-    overflow: hidden;
-    display:grid;
-    background-color:#4a4a4a;
-    place-items:center;
-    z-index: 9999999999999998;
-}
-
-.menu2 .menuToggle2{
-    position: relative;
-    top:0;
-    right:0;
-    width:1.875em;
-    height:3.75em;
-    border:1px solid rgba(255,255,255,0.25);
-    cursor:pointer;
-    display:none;
-    align-items:center;
-    justify-content:flex-start;
-    padding: 0 23px;
-}
-.menu2 .menuToggle2:before{
-    content:'';
-    position:absolute;
-    width:1.875em;
-    height:2px;
-    background:#ccc;
-    transform: translateY(-8px);
-    transition: 0.5s;
-}
-.menu2.open .menuToggle2:before{
-    transform:rotate(-45deg);
-    background:#ccc;
-    width:1.25em;
-}
-.menu2 .menuToggle2:after{
-    content:'';
-    position:absolute;
-    width:1.875em;
-    height:2px;
-    background:#ccc;
-    transform: translateY(8px);
-    transition: 0.5s;
-    box-shadow: 0 -8px 0 #ccc;
-}
-.menu2.open .menuToggle2:after{
-    transform:rotate(45deg);
-    box-shadow:none;
-    width:1.25em;
-}
-
-.menu2.open .menuToggle2{
-    width:1.25em;
-    height:3.25em;
-}
-
-.menu2.open{
-    position:fixed;
-    top:0;
-    right:0;
-    z-index:99999999999999999;
+@keyframes background {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 51%}
+    100%{background-position:0% 50%}
 }
 
 @media screen and (max-width: 75em){
@@ -189,15 +161,17 @@
     }
 }
 @media screen and (max-width: 68.75em) {
-    #list{
-        grid-column-gap: 20vw;
+    #mList{
+        grid-template-rows: auto 1fr;
+        grid-template-columns: auto;
+        grid-gap: 10px;
     }
 	.blockArt>.block>.inblock>img{
 		width:7.5em;
 	}
 }
 @media screen and (max-width:34.375em) {
-    #list{
+    #mList{
         grid-column-gap: 10vw;
     }
     .blockArt{
@@ -214,8 +188,8 @@
     #monitor{
         display:none;
     }
-    .menu2 .menuToggle2{
-        display:flex;
+    #sel{
+        display:block;
     }
     #enlist{
         width:55vw;
