--- a/inc/style/style.css
+++ b/inc/style/style.css
@@ -41,11 +41,13 @@ html,body{
 .footer{
     flex:0 0 auto;
 }
-.header{
+.head{
     position: sticky;
     top: 0;
     background-color: rgba(255,255,255,0.75);
     z-index: 1;
+}
+.header{
     display:grid;
 	grid-template-columns:auto auto;
 	justify-content:space-between;
