--- a/inc/style/style.css
+++ b/inc/style/style.css
@@ -12,7 +12,6 @@
     margin: 0;
     padding: 0;
     transition-duration: 1s;
-    box-sizing: border-box;
 }
 a{
     text-decoration: none;
@@ -136,7 +135,7 @@ html,body{
 .menu .menuToggle{
     position: absolute;
     top:0;
-    right:0;
+    right:10px;
     width:1.875em;
     height:3.75em;
     border:1px solid rgba(0,0,0,0.25);
