--- a/inc/style/style.css
+++ b/inc/style/style.css
@@ -4,10 +4,6 @@
 @import url("../../fonts/League Gothic/style.css");
 @import url("../../fonts/Roboto/style.css");
 
-/*
-.preloader-1 h1{color:#fff;margin-left:100px;margin-top:-10px;margin-bottom:10px}.preloader-1 progress{font-size:2em;background:#777}.preloader-1 progress::-moz-progress-bar{background:linear-gradient(to left,#cdeb8e 0%,#ad6dba 100%)}.preloader-1 progress::-webkit-progress-bar{background:linear-gradient(to left,#cdeb8e 0%,#ad6dba 100%)}.preloader-1 progress::-o-progress-bar{background:linear-gradient(to left,#cdeb8e 0%,#ad6dba 100%)}.preloader-1 progress::-ms-progress-bar{background:linear-gradient(to left,#cdeb8e 0%,#ad6dba 100%)}.preloader-1 .progress-value{padding:0px 5px;line-height:20px;margin-left:5px;font-size:1.8em;color:#fff;height:18px}*/
-
-
 *{
     margin: 0;
     padding: 0;
@@ -18,6 +14,10 @@ a{
     color:#000;
 }
 body.fixed{overflow:hidden}
+body{
+    min-height: 100vh;
+    min-width: 100vw;
+}
 .loaded_hiding .preloader{
     transition:0.3s opacity;
     opacity:0
@@ -112,11 +112,15 @@ html,body{
     flex-direction: column;
     transition: 0.5s;
     transform: translateY(-15em);
+    -webkit-transform: translateY(-15em);
+    -ms-transform: translateY(-15em);
     z-index: -2;
 }
 .nav.open{
     display: flex;
     transform: translateY(0);
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
     z-index: 1;
 }
 .nav>li{
@@ -152,10 +156,14 @@ html,body{
     height:2px;
     background:#333;
     transform: translateY(-8px);
+    -webkit-transform: translateY(-8px);
+    -ms-transform: translateY(-8px);
     transition: 0.5s;
 }
 .menu.open .menuToggle:before{
     transform:rotate(-45deg);
+    -webkit-transform:rotate(-45deg);
+    -ms-transform:rotate(-45deg);
 }
 .menu .menuToggle:after{
     content:'';
@@ -164,11 +172,15 @@ html,body{
     height:2px;
     background:#333;
     transform: translateY(8px);
+    -webkit-transform: translateY(8px);
+    -ms-transform: translateY(8px);
     transition: 0.5s;
     box-shadow: 0 -8px 0 #333;
 }
 .menu.open .menuToggle:after{
     transform:rotate(45deg);
+    -webkit-transform:rotate(45deg);
+    -ms-transform:rotate(45deg);
     box-shadow:none;
 }
 .footer{
@@ -203,9 +215,13 @@ html,body{
     right: 0;
     bottom: 0;
     transform:translate(0.6em,5.625em);
+    -webkit-transform:translate(0.6em,5.625em);
+    -ms-transform:translate(0.6em,5.625em);
 }
 .backToTop.show{
     transform:translate(-0.6em,-0.625em);
+    -webkit-transform:translate(-0.6em,-0.625em);
+    -ms-transform:translate(-0.6em,-0.625em);
 }
 .backToTop:hover{
     opacity: 0.6;
